Developer/src/objects/SFDC_Job_Candidate__c.object
<CustomObject>
    <description>募集職種-候補者リンクオブジェクト</description>
    <fields>
        <fullName>SFDC_Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>候補者</label>
        <referenceTo>SFDC_Candidate__c</referenceTo>
        <relationshipLabel>職種-候補者リンク</relationshipLabel>
        <relationshipName>R00N10000000EAH1EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Job__c</fullName>
        <label>職種</label>
        <referenceTo>SFDC_Job__c</referenceTo>
        <relationshipName>R00N10000000EAI0EAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>書類選考</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>面接プロセス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>待遇調整</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>採用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不採用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>応募キャンセル</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>職種-候補者リンク</label>
    <nameField>
        <displayFormat>JID{000000}</displayFormat>
        <label>職種-候補者リンク番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>